--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('img/MAPA.jpg');
+    background-image: url('imganesnoenemigo/MAPA.jpg');
     background-size: contain; /* Ajusta la imagen para que se vea entera */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     
